tests/error/enum_literal1.bz
// error: unable to match type '<error-type>' to 'auto'
enum E
{
	a,
	b,
}

function test()
{
	let _ = .a;
}
